--- a/src/app/sesion/menu-lateral/menu-lateral.component.html
+++ b/src/app/sesion/menu-lateral/menu-lateral.component.html
@@ -1,12 +1,19 @@
-<mat-sidenav-container>
-    <mat-sidenav mode="side" opened>
-        <mat-nav-list>
-            <a mat-list-item routerLink="">Usuarios</a>
-            <a mat-list-item routerLink="">Salas</a>
-            <a mat-list-item routerLink="">Noticias</a>
-        </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content>
-        <router-outlet></router-outlet>
-    </mat-sidenav-content>
-</mat-sidenav-container>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Mi Aplicación</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/formulario1">Formulario 1</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/formulario2">Formulario 2</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/formulario3">Formulario 3</a>
+            </li>
+        </ul>
+    </div>
+</nav>
