--- a/src/app/layout/principal/principal.component.html
+++ b/src/app/layout/principal/principal.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" *ngIf="!authService.estaAutenticado()">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -22,101 +22,29 @@
         </div>
     </div>
 </nav>
-<header class="fondo container-fluid">
-    <div class="row d-flex align-items-center text-center" style="padding-top: 6rem;">
+<header class="fondo container-fluid" *ngIf="!estaAutenticado()">
+    <div class=" row d-flex align-items-center text-center" style="padding-top: 6rem;">
         <div class="col-md-3">
             <img src="\assets\img\logojardin.png" alt="logojardin" width="200" height="200">
         </div>
         <div class="col-md-9">
-            <h1 class="mensaje-bienvenida ">¡BIENVENIDOS a nuestra App!</h1>
-            <h3 style="color: whitesmoke; text-shadow: 1px 1px rgb(161, 159, 159); ">Conectando a familias y escuela para una educación más efectiva y cercana</h3>
+            <h1 class="mensaje-bienvenida">¡BIENVENIDOS a nuestra App!</h1>
+            <h3 style="color: whitesmoke; text-shadow: 1px 1px rgb(161, 159, 159);">Conectando a familias y escuela para una educación más cercana</h3>
         </div>
     </div>
 </header>
 <router-outlet></router-outlet>
 
 
-<footer class="py-2 bg-dark text-white ">
+<footer class="py-2 bg-dark text-white">
     <div class="container ">
-        <div class="row align-items-center ">
-            <div class="col-lg-9 text-lg-start ">Copyright &copy; MaternalConnect 2023</div>
-            <div class="col-lg-3 my-3 my-lg-0 ">
-                <a class="btn btn-dark " href="#! "><i class="fab fa-twitter "></i></a>
-                <a class="btn btn-dark " href="#! "><i class="fab fa-facebook-f "></i></a>
-                <a class="btn btn-dark " href="#! "><i class="fab fa-linkedin-in "></i></a>
+        <div class="row align-items-center">
+            <div class="col-lg-9 text-lg-start">Copyright &copy; MaternalConnect 2023</div>
+            <div class="col-lg-3 my-3 my-lg-0">
+                <a class="btn btn-dark" href="#!"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-dark" href="#!"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-dark" href="#!"><i class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
     </div>
 </footer>
-
-<div class="wrapper d-flex align-items-stretch">
-    <nav id="sidebar" class="active">
-        <h1><a href="index.html" class="logo">M.</a></h1>
-        <ul class="list-unstyled components mb-5">
-            <li class="active">
-                <a href="#"><span class="fa fa-home"></span> Home</a>
-            </li>
-            <li>
-                <a href="#"><span class="fa fa-user"></span> About</a>
-            </li>
-            <li>
-                <a href="#"><span class="fa fa-sticky-note"></span> Blog</a>
-            </li>
-            <li>
-                <a href="#"><span class="fa fa-cogs"></span> Services</a>
-            </li>
-            <li>
-                <a href="#"><span class="fa fa-paper-plane"></span> Contacts</a>
-            </li>
-        </ul>
-
-        <div class="footer">
-            <p>
-                Copyright &copy;
-                <script>
-                    document.write(new Date().getFullYear());
-                </script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-            </p>
-        </div>
-    </nav>
-
-    <!-- Page Content  -->
-    <div id="content" class="p-4 p-md-5">
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-
-                <button type="button" id="sidebarCollapse" class="btn btn-primary">
-                    <i class="fa fa-bars"></i>
-                    <span class="sr-only">Toggle Menu</span>
-                </button>
-                <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fa fa-bars"></i>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-        <h2 class="mb-4">Sidebar #07</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-</div>
