--- a/src/app/sesion/dashboard/dashboard.component.html
+++ b/src/app/sesion/dashboard/dashboard.component.html
@@ -1,1 +1,3 @@
-<p>dashboard works!</p>
+<div class="container" style="padding-top: 56px; padding-left: 225px;">
+    <app-menu-lateral></app-menu-lateral>
+</div>
