--- a/src/app/sesion/menu-lateral/menu-lateral.component.html
+++ b/src/app/sesion/menu-lateral/menu-lateral.component.html
@@ -1,19 +1,55 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Mi Aplicación</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/formulario1">Formulario 1</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/formulario2">Formulario 2</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/formulario3">Formulario 3</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<div class="sidebar-nav">
+    <nav class="navbar navbar-dark fixed-top">
+        <div class="container">
+            <!-- Mobile Menu Toggle Button -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Menus List -->
+            <div class="offcanvas offcanvas-start shadow" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel" style="position: fixed;">
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav">
+                        <li><a class="link" href="#"><i class="bi bi-calendar3"></i> <span class="item-text">Calendario</span></a></li>
+                        <li><a class="link" href="#"><i class="bi bi-pencil-square"></i> <span class="item-text">Tareas</span></a></li>
+                        <li><a class="link" routerLink="usuarios"><i class="bi bi-people "></i> <span class="item-text ">Usuarios</span></a></li>
+                        <li><a class="link" routerLink="docentes"><i class="bi bi-people "></i> <span class="item-text ">Docentes</span></a></li>
+                        <li><a class="link" routerLink="alumnos"><i class="bi bi-people "></i> <span class="item-text ">Estudiantes</span></a></li>
+                        <li><a class="link " routerLink="salas"><i class="bi bi-book "></i> <span class="item-text ">Salas</span></a></li>
+                        <li><a class="link " routerLink="noticias"><i class="bi bi-person-check "></i> <span class="item-text ">Noticias</span></a></li>
+                        <li><a class="link " href="# "><i class="bi bi-envelope "></i> <span class="item-text ">Notificaciones</span></a></li>
+                        <li><a class="link " href="# "><i class="bi bi-graph-up "></i> <span class="item-text ">Reportes</span></a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="btn-group ">
+                <a href="# " class="dropdown-toggle text-white text-decoration-none " data-bs-toggle="dropdown " aria-expanded="false ">
+                    <span class="usericon "><i class="bi bi-person-circle "></i></span>
+                    <span class="textnone ">{{usuarioLogueado}}</span>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end ">
+                    <li><button class="dropdown-item " type="button "><i class="bi bi-lock-fill "></i> Cambiar Password</button></li>
+                    <li><button class="dropdown-item " type="button "><i class="bi bi-gear-fill "></i> Administrar usuario</button></li>
+                    <li><button class="dropdown-item " type="button "><i class="bi bi-gear-wide-connected "></i> Configuración</button></li>
+                    <li>
+                        <hr class="dropdown-divider ">
+                    </li>
+                    <li><button class="dropdown-item " type="button "><i class="bi bi-box-arrow-right "></i> Salir</button></li>
+                </ul>
+            </div>
+
+        </div>
+    </nav>
+</div>
+<div class="container " style="padding-top: 56px; padding-left: 200px; ">
+    <router-outlet></router-outlet>
+</div>
+<!-- 
+<div>
+    <app-usuarios *ngIf="servicioVentanas.switchUsuario "></app-usuarios>
+    <app-salas-forms *ngIf="servicioVentanas.switchSala "></app-salas-forms>
+    <app-docentes-forms *ngIf="servicioVentanas.switchDocente "></app-docentes-forms>
+    <app-alumnos-forms *ngIf="servicioVentanas.switchAlumno "></app-alumnos-forms>
+    <app-noticias-forms *ngIf="servicioVentanas.switchNoticia "></app-noticias-forms>
+</div> -->
